--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@ body{
 
     .weather-body{
         width: 95%;
-        height: 60vh;
-        position: absolute;
+        height: 50vh;
+        position: relative;
     }
 
     .temp{
