--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body{
 
     .weather-body{
         width: 95%;
-        height: 50vh;
+        height: 80%;
         position: relative;
     }
 
