--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-image: url('images/clear.jpg');
     height: 100vh;
     overflow: hidden;
@@ -14,7 +14,7 @@ body{
     background-size: cover;
 }
 
-.app-main{
+.app-main {
     width: 50vh;
     margin: 100px auto;
     background-color: rgba(196, 209, 16, 0.6);
@@ -22,11 +22,11 @@ body{
     text-align: center;
 }
 
-.app-main > * {
+.app-main>* {
     margin-bottom: 10px;
 }
 
-.input-box{
+.input-box {
     width: 100%;
     background-color: rgba(255, 255, 255, 0.6);
     border: none;
@@ -39,42 +39,45 @@ body{
     text-align: center;
 }
 
-.input-box:focus{
+.input-box:focus {
     background-color: rgba(255, 255, 255);
 }
 
-.weather-body{
+.weather-body {
     display: none;
     color: #582233;
     padding: 20px;
     line-height: 2rem;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.6);
-    height: 40vh;
+    height: 50vh;
+    position: relative;
 }
 
-.location-details{
+.location-details {
     font-weight: bold;
 }
 
-.weather-status{
+.weather-status {
     padding: 20px;
 }
 
-.temp{
+.temp {
     font-size: 50pt;
     font-weight: 700;
     margin: 20px 0;
     text-shadow: 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.feels-like, .humidity, .weather{
+.feels-like,
+.humidity,
+.weather {
     font-size: 12pt;
     font-weight: 600;
 }
 
-@media (max-width: 400px){
-    .app-main{
+@media (max-width: 400px) {
+    .app-main {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -85,19 +88,16 @@ body{
         padding: 20px;
         text-align: center;
     }
-
-    .weather-body{
+    .weather-body {
         width: 95%;
         height: 80%;
         position: relative;
     }
-
-    .temp{
+    .temp {
         font-size: 36pt;
         font-weight: normal;
     }
-
-    .app-main{
+    .app-main {
         margin: 50px auto;
     }
 }
